# pkg/controllers/tables.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"net/http"
+	"r_keeper/errs"
 	"r_keeper/logger"
 	"r_keeper/models"
 	"r_keeper/pkg/service"
@@ -25,6 +26,12 @@ import (
 // @Failure default {object} ErrorResponse
 // @Router /api/tables [post]
 func CreateTable(c *gin.Context) {
+	userRole := c.GetString(userRoleCtx)
+	if userRole != "admin" {
+		handleError(c, errs.ErrPermissionDenied)
+		return
+	}
+
 	var table models.Table
 	if err := c.BindJSON(&table); err != nil {
 		logger.Error.Printf("[controllers.CreateTable] error creating table %v\n", err)
@@ -64,6 +71,12 @@ func CreateTable(c *gin.Context) {
 // @Failure default {object} ErrorResponse
 // @Router /api/tables [get]
 func GetAllTables(c *gin.Context) {
+	userRole := c.GetString(userRoleCtx)
+	if userRole != "admin" {
+		handleError(c, errs.ErrPermissionDenied)
+		return
+	}
+
 	tables, err := service.GetAllTables()
 	if err != nil {
 		logger.Error.Printf("[controllers.GetAllTables] error getting all tables: %v\n", err)
@@ -92,6 +105,12 @@ func GetAllTables(c *gin.Context) {
 // @Failure default {object} ErrorResponse
 // @Router /api/tables/{id} [get]
 func GetTableByID(c *gin.Context) {
+	userRole := c.GetString(userRoleCtx)
+	if userRole != "admin" {
+		handleError(c, errs.ErrPermissionDenied)
+		return
+	}
+
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		logger.Error.Printf("[controllers.GetTableByID] error getting table %v\n", err)
@@ -108,6 +127,7 @@ func GetTableByID(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, gin.H{
 			"error": err.Error(),
 		})
+		return
 	}
 
 	c.JSON(http.StatusOK, table)
@@ -122,13 +142,19 @@ func GetTableByID(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path integer true "id of the table"
-// @Param input body models.Table true "table update info"
+// @Param input body models.SwagTable true "table update info"
 // @Success 200 {object} defaultResponse
 // @Failure 400 404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
 // @Failure default {object} ErrorResponse
 // @Router /api/tables/{id} [put]
 func EditTableByID(c *gin.Context) {
+	userRole := c.GetString(userRoleCtx)
+	if userRole != "admin" {
+		handleError(c, errs.ErrPermissionDenied)
+		return
+	}
+
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		logger.Error.Printf("[controllers.EditTableByID] error editing table: %v\n", err)
@@ -172,6 +198,12 @@ func EditTableByID(c *gin.Context) {
 // @Failure default {object} ErrorResponse
 // @Router /api/tables/{id} [delete]
 func DeleteTableByID(c *gin.Context) {
+	userRole := c.GetString(userRoleCtx)
+	if userRole != "admin" {
+		handleError(c, errs.ErrPermissionDenied)
+		return
+	}
+
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		logger.Error.Printf("[controllers.DeleteTableByID] error deleating table: %v\n", err)
